exerpimenting with overtone.at-at, sample accurate scheduling of notes